--- a/assets/main.css
+++ b/assets/main.css
@@ -12,8 +12,8 @@ body {
   padding-top: .15em;
 }
 
-.logo {
-  background-image: url("/assets/logo.png");
+.y {
+  background-image: url("/assets/y.png");
 }
 
 .topright {
