--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
     <a href="https://github.com/yadavcloud">github</a> |
     <a href="/sitemap.xml">sitemap</a> |
     <a href="/atom.xml">feed</a>
-
-    <span class="logo monkey">&nbsp;</span> 🇮🇳
+    <br/>
+    <span class="logo y">&nbsp;</span> 🇮🇳
 
     © 2012-{{ site.time | date: '%Y' }} {{site.author}} <br/>
     You can email us at name@yadav.cloud
