--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div class="page-header">
   <div>
     <span class="pagetop">
-      <b class="rmain"><span class="logo monkey">&nbsp;</span> {{site.title}} &nbsp;</b>
+      <b class="rmain"><span class="logo y">&nbsp;</span> {{site.title}} &nbsp;</b>
     </span>
     <span>
-      <a href="/about">about</a> |
+      <a href="/">home</a> |
       <a href="/recipes">recipes</a>
     </span>
     <span class="topright">
