--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/atom+xml" title="{% if page.title %}{{ site.title}} - {{page.title }}{% else %}{{ site.title }}{% endif %}" href="{{ "/atom.xml" | prepend: site.baseurl | prepend: site.url }}" />
-    <link rel="icon" type="image/png" href="/assets/logo.png" />
+    <link rel="icon" type="image/png" href="/assets/y.png" />
     <link rel="stylesheet" href="{{ "/assets/bootstrap.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/assets/main.css" | prepend: site.baseurl }}">
   </head>
