--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     </span>
     <span>
       <a href="/">home</a> |
+      <a href="/posts">posts</a> |
       <a href="/recipes">recipes</a>
     </span>
     <span class="topright">
