--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
       <a href="/recipes">recipes</a>
     </span>
     <span class="topright">
-      <a style="text-decoration: none;" href="mailto:{{site.email}}" title="Email: {{site.email}}">mail</a> |
+      <a style="text-decoration: none;" href="mailto:{{site.email}}" title="Email: {{site.email}}">report</a> |
       <a style="text-decoration: none;" href="https://github.com/yadavcloud" title="Github">github</a>
     </span>
   </div>
