--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <p>
-    <a href="/">about</a> |
+    <a href="/">home</a> |
     <a href="/posts">posts</a> |
     <a href="/recipes">recipes</a> |
-    <a href="mailto:{{site.email}}">email</a> |
+    <a href="mailto:{{site.email}}">report</a> |
     <a href="https://github.com/yadavcloud">github</a> |
     <a href="/sitemap.xml">sitemap</a> |
     <a href="/atom.xml">feed</a>
