--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
   <header class="post-header">
     <h2 class="post-title"><b>{{ page.title }}</b></h2>
-    <span>Last Updated: {{ page.date | date: "%b %-d, %Y" }}</span>
+    <span class="light">Last Updated: {{ page.date | date: "%b %-d, %Y" }}</span>
   </header>
 
   <article class="post-content">
