--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,6 @@
 body {
   font-size: 18px;
-  background-color: #fff;
+  background-color: #f7f6f1;
 }
 
 .logo {
@@ -50,8 +50,8 @@ and (max-width : 796px) {
 }
 
 .container {
-  max-width: 1000px;
-  background: #fff;
+  max-width: 800px;
+  background: #f7f6f1;
 }
 
 .footer {
