--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,6 @@
     Last updated: {{ site.time | date: '%-d-%-m-%Y %-H:%M:%S' }} <br/>
     <span class="logo y">&nbsp;</span>
     © 2012-{{ site.time | date: '%Y' }} {{site.author}} <br/>
-    You can email us at <name>@yadav.cloud
+    You can email us at {name}@yadav.cloud
   </p>
 </footer>
