--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
     <br/>
     Last updated: {{ site.time | date: '%-d-%-m-%Y %-H:%M:%S' }} <br/>
     <span class="logo y">&nbsp;</span>
-    You can email us at {name}@yadav.cloud
+    You can email us at <i>name@yadav.cloud</i>
   </p>
 </footer>
